<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CadastroDespesa" >


    <Button
        android:id="@+id/btnCadastrarDespesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="25dp"
        android:background="@color/botao_entrar"
        android:text="@string/botao_salvar" />

    <TextView
        android:id="@+id/txtCadastroDespesaNomeFornecedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="43dp"
        android:text="@string/cadastro_despesa_nome_Fornecedor" />

    <EditText
        android:id="@+id/txtCadastroDespesaFornecedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtCadastroDespesaNomeFornecedor"
        android:layout_alignBottom="@+id/txtCadastroDespesaNomeFornecedor"
        android:layout_toRightOf="@+id/txtCadastroDespesaNomeFornecedor"
        android:inputType="text"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtCadastroDespesaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textCadastrarDespesaData"
        android:layout_alignLeft="@+id/txtCadastroDespesaDocumento"
        android:layout_alignRight="@+id/txtCadastroDespesaDocumento"
        android:inputType="number"
        android:ems="10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textCadastrarDespesaData"
        android:layout_marginTop="33dp"
        android:text="@string/cadastro_despesa_valor" />

    <EditText
        android:id="@+id/txtCadastroDespesaValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignLeft="@+id/txtCadastroDespesaData"
        android:inputType="number"
        android:ems="10" />

    <TextView
        android:id="@+id/textCadastrarDespesaData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView6"
        android:layout_below="@+id/txtCadastrarDespesaNumeroDocumento"
        android:layout_marginTop="31dp"
        android:text="@string/cadastro_despesa_data" />

    <EditText
        android:id="@+id/txtCadastroDespesaDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/txtCadastrarDespesaNumeroDocumento"
        android:layout_toRightOf="@+id/txtCadastroDespesaNomeFornecedor"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtCadastrarDespesaNumeroDocumento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textCadastrarDespesaData"
        android:layout_below="@+id/txtCadastroDespesaFornecedor"
        android:layout_marginTop="45dp"
        android:text="@string/cadastro_despesa_numero_documento" />

</RelativeLayout>