<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textViewNomeFornecedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/cadastro_despesa_nome_Fornecedor" />

    <TextView
        android:id="@+id/txtItemFornecedor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewNomeFornecedor"
        android:text="TextView" />

    <TextView
        android:id="@+id/textViewDataDespesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtItemFornecedor"
        android:text="@string/cadastro_despesa_data" />

    <TextView
        android:id="@+id/textViewValorDespesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewDataDespesa"
        android:text="@string/cadastro_despesa_valor" />

    <TextView
        android:id="@+id/txtItemData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtItemValor"
        android:layout_centerHorizontal="true"
        android:text="TextView" />

    <TextView
        android:id="@+id/txtItemValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewValorDespesa"
        android:layout_alignBottom="@+id/textViewValorDespesa"
        android:layout_alignLeft="@+id/txtItemData"
        android:text="TextView" />

</RelativeLayout>
