<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuConsultas" >

    <TextView
        android:id="@+id/txtMenuConsultasDataAtual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/txtMenuConsultasSaudacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtMenuConsultasDataAtual"
        android:layout_alignRight="@+id/btnConsultaEmpresaNome"
        android:layout_below="@+id/txtMenuConsultasDataAtual"
        android:layout_marginTop="15dp"
        android:text="TextView" />

    <Button
        android:id="@+id/btnConsultaEmpresaNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtMenuConsultasSaudacao"
        android:layout_marginTop="24dp"
        android:background="@color/botao_entrar"
        android:text="@string/consulta_empresa_nome" />

    <Button
        android:id="@+id/btnConsultaEmpresaEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnConsultaEmpresaNome"
        android:layout_alignRight="@+id/btnConsultaEmpresaNome"
        android:layout_below="@+id/btnConsultaEmpresaNome"
        android:layout_marginTop="24dp"
        android:background="@color/botao_entrar"
        android:text="@string/consulta_empresa_endereco" />

    <Button
        android:id="@+id/btnConsultaEmpresaCnpj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnConsultaEmpresaEndereco"
        android:layout_alignRight="@+id/btnConsultaEmpresaEndereco"
        android:layout_below="@+id/btnConsultaEmpresaEndereco"
        android:layout_marginTop="20dp"
        android:background="@color/botao_entrar"
        android:text="@string/consulta_empresa_cnpj" />

</RelativeLayout>